--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <body>
     <!-- Spinner Start -->
     <h1>hi jyotfdsfds</h1>
+    <h2>hi jyotfdsfds</h2>
+
     <div
       id="spinner"
       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
