--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <!-- Spinner Start -->
     <h1>hi jyotfdsfds</h1>
     <h2>hi jyotfdsfds</h2>
+    <h3>hi jyotfdsfds</h3>
 
     <div
       id="spinner"
