--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <h1>hi jyotfdsfds</h1>
     <h2>hi jyotfdsfds</h2>
     <h3>hi jyotfdsfds</h3>
+    <button>click me</button>
 
     <div
       id="spinner"
