--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>hi jyotfdsfds</h1>
     <h2>hi jyotfdsfds</h2>
     <h3>hi jyotfdsfds</h3>
-
+    <a href="https://www.google.com" target="_blank"></a>
     <div
       id="spinner"
       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
